# lipm_gait_controller

./: .pylintrc  LICENSE  README.md  inverse_kinematics.py  lipm_closed_loop.py  lipm_preview_control.py  main.py  preview_gains.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  lint.yml  pylint.yml
examples/: squat_inverse_kinematics.py  step_1_preview_gains.py  step_2_lipm_preview_control.py  step_3_feet_motion.py  step_3_squat_inverse_kinematics.py  step_4_feet_motion.py  step_4_walk_inverse_kinematic.py  step_5_walk_inverse_kinematic.py  step_inverse_kinematics.py  walking_controller.py
lipm_walking_controller/: controller.py  foot.py  foot_planner.py  inverse_kinematic.py  model.py  plot.py
src/: foot_motion.py  inverse_kinematics.py  lipm_preview_control.py  squat_inverse_kinematics.py  step_inverse_kinematics.py  walking_controller.py
