[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "lipm-walking-controller"
version = "0.1.0"
description = "LIPM preview control, footstep and IK/QP building blocks for biped walking demos."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Romain Desarzens" }]
license-files = ["LICENSE"]
keywords = ["biped", "LIPM", "ZMP", "walking", "pinocchio", "QP", "robotics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "shapely>=2.0",
  "meshcat>=0.3",
  "qpsolvers>=4.0",
  "osqp>=0.6",
  # Pinocchio: pip package name is `pin`. Prefer conda-forge/apt if pip wheels are unavailable.
  "pin>=2.7",
]

[project.urls]
Homepage = "https://github.com/rdesarz/lipm-walking-controller"
Issues = "https://github.com/rdesarz/lipm-walking-controller/issues"

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "types-setuptools",
  "types-requests",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings>=0.25",
  "mkdocstrings-python>=1.10",
]

[tool.black]
line-length = 100
target-version = ["py310"]
preview = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
plugins = []

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"